--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -2,10 +2,62 @@
 <html>
  <head>
   <meta charset="UTF-8">
-  <title>Basketball Team Signup</title>
  </head>
  <body>
  </body>
 </html>
 
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Basketball Team Signup</title>
+
+    <!-- Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  </head>
+  <body>
+    <form action="/team" method="POST">
+      <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" class="form-control" name="name" id="name" placeholder="Enter name">
+      </div>
+      <div class="form-group">
+        <label for="coach">Coach:</label>
+        <input type="text" class="form-control" name="coach" id="coach" placeholder="Coach name">
+      </div>
+      <div class="form-group">
+        <label for="pg">Point Guard:</label>
+        <input type="text" class="form-control" name="pg" id="pg" placeholder="point guard">
+      </div>
+      <div class="form-group">
+        <label for="sg">Shooting Guard</label>
+        <input type="text" class="form-control" name="sg" id="sg" placeholder="shooting guard">
+      </div>
+      <div class="form-group">
+        <label for="sf">Small Foward</label>
+        <input type="text" class="form-control" name="sf" id="sf" placeholder="small foward">
+      </div>
+      <div class="form-group">
+        <label for="pf">Power Forward</label>
+        <input type="text" class="form-control" name="pf" id="pf" placeholder="power forward">
+      </div>
+      <div class="form-group">
+        <label for="c">Center</label>
+        <input type="text" class="form-control" name="c" id="c" placeholder="power forward">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+  </body>
+</html>
