--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,15 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
+
+  <h1>Basketball Team</h1>
+  <p>Team Name: <%= @team_name %></p>
+  <p>Coach: <%= @coach %></p>
+  <p>Point Guard: <%= @point_guard %></p>
+  <p>Shooting Guard: <%= @shooting_guard %></p>
+  <p>Small Forward: <%= @small_forward %></p>
+  <p>Power Forward: <%= @power_forward %></p>
+  <p>Center: <%= @center %></p>
 
 
  </body>
