--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,15 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
+
+<h1><p>Team Name:<%=" #{@team}"%></p></h1>
+<h2><p>Coach:<%=" #{@coach}"%></p><h2>
+<h2><p>Point Guard:<%=" #{@pg}"%></p><h2>
+<h2><p>Shooting Guard:<%=" #{@sg}"%></p><h2>
+<h2><p>Small Forward:<%=" #{@sf}"%></p><h2>
+<h2><p>Power Forward:<%=" #{@pf}"%></p><h2>
+<h2><p>Center:<%=" #{@c}"%></p><h2>
+
 
 
  </body>
