--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -1,50 +1,20 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1">   
    <meta charset="UTF-8">
-  <title>Basketball Team Signup</title>
+  <title>Create A Basketball Team</title>
  </head>
  <body>
   <h1>Create a Basketball Team!</h1>
- <form method="POST" action="/newteam">
+ <form method="POST" action="/team">
 
- <p> Team Name: <input type="text" class="form-control" name="name" id="name" placeholder="Enter Team name"></p>
-  <p> Team Name: <input type="text" class="form-control" name="name" id="name" placeholder="Enter Team name"></p>
-
-   
-
-   <div class="form-group">
-      <label for="name">Coach:</label>
-      <input type="text" class="form-control" name="coach" id="name" placeholder="Enter Coach">
-   </div>
-
-   <div class="form-group">
-      <label for="name">Point Guard:</label>
-      <input type="text" class="form-control" name="pg" id="name" placeholder="Enter Point Guard">
-   </div>
-
-   <div class="form-group">
-      <label for="name">Shooting Guard:</label>
-      <input type="text" class="form-control" name="sg" id="name" placeholder="Enter Shooting Guard">
-   </div>
-
-   <div class="form-group">
-      <label for="name">Power Forward:</label>
-      <input type="text" class="form-control" name="pf" id="pf" placeholder="Enter Power Forward">
-   </div>
-
-   <div class="form-group">
-      <label for="name">Small Forward:</label>
-      <input type="text" class="form-control" name="sf" id="name" placeholder="Enter Small Forward">
-   </div>
-
-   <div class="form-group">
-      <label for="name">Center:</label>
-      <input type="text" class="form-control" name="c" id="name" placeholder="Enter Center">
-   </div>
-
+   <p>Team Name: <input type="text" name="name" placeholder="Enter Team name"></p>
+   <p>Coach: <input type="text"  name="coach" placeholder="Enter Coach"></p>
+   <p>Point Guard: <input type="text"  name="pg" placeholder="Enter Point Guard"></p>
+   <p>Shooting Guard: <input type="text"  name="sg" placeholder="Enter Shooting Guard"></p>
+   <p>Power Forward: <input type="text"  name="pf" placeholder="Enter Power Forward"></p>
+   <p>Small Forward: <input type="text"  name="sf" placeholder="Enter Small Forward"></p>
+   <p>Center: <input type="text"  name="c" placeholder="Enter Center"></p>
     <input type="submit" id="Submit">
 
 
